--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "homepages": [],
-  "source_base_path": "G:/projects/vector/github/Blackwood.IO/Documentation",
+  "source_base_path": "G:/projects/github/Blackwood.IO/Documentation",
   "xrefmap": "xrefmap.yml",
   "files": [
     {
@@ -21,7 +21,7 @@
       "output": {
         ".html": {
           "relative_path": "api/index.html",
-          "hash": "feMUS7aNv45znFNcDvgCLg=="
+          "hash": "naTfirTY9RVGkAjoo8VNkQ=="
         }
       },
       "is_incremental": false,
@@ -33,7 +33,7 @@
       "output": {
         ".html": {
           "relative_path": "articles/intro.html",
-          "hash": "lBTUWxfkawgyLfAnVcU9gg=="
+          "hash": "P5tTxuTQcJLHMjVn5a1m2w=="
         }
       },
       "is_incremental": false,
@@ -57,7 +57,7 @@
       "output": {
         ".html": {
           "relative_path": "contributing/CONTRIBUTING.html",
-          "hash": "l/9QC6OXJTg9XQiOlOgckQ=="
+          "hash": "1J0U9wH+B5Y44FXMd6/m3w=="
         }
       },
       "is_incremental": false,
@@ -69,7 +69,7 @@
       "output": {
         ".html": {
           "relative_path": "contributing/code_of_conduct.html",
-          "hash": "xpdYcwx9E38ivGRCEVVfLQ=="
+          "hash": "KY1ZLiTnzuFWcPm6Z9ZM+g=="
         }
       },
       "is_incremental": false,
@@ -81,7 +81,7 @@
       "output": {
         ".html": {
           "relative_path": "contributing/how-to-file-an-issue.html",
-          "hash": "hVwvLwurOMWsZUE5a++NgA=="
+          "hash": "pVrmXRRLVn5m0Qwnn3LdCg=="
         }
       },
       "is_incremental": false,
@@ -93,7 +93,7 @@
       "output": {
         ".html": {
           "relative_path": "contributing/pull-requests.html",
-          "hash": "yMegOi6yA/hUWabEAmOPqA=="
+          "hash": "eeDr7lagJCvf0qEEdY6U/A=="
         }
       },
       "is_incremental": false,
@@ -105,7 +105,7 @@
       "output": {
         ".html": {
           "relative_path": "contributing/style-guide.html",
-          "hash": "XKVReqJBjNmKf08IaKaC+A=="
+          "hash": "mi5ItNQI38FQO7SBRNHEYg=="
         }
       },
       "is_incremental": false,
@@ -117,7 +117,7 @@
       "output": {
         ".html": {
           "relative_path": "index.html",
-          "hash": "dFCt4dLJWxzRXILpZFfn6g=="
+          "hash": "ajGqEZuooJOkGkuCGvBUgg=="
         }
       },
       "is_incremental": false,
@@ -129,7 +129,7 @@
       "output": {
         ".html": {
           "relative_path": "api/Blackwood.Application.html",
-          "hash": "T/IRvi9AM88HNle5o8oYnQ=="
+          "hash": "uMf5D7FZybR7HRiUL16GzQ=="
         }
       },
       "is_incremental": false,
@@ -141,7 +141,7 @@
       "output": {
         ".html": {
           "relative_path": "api/Blackwood.CacheItem-1.html",
-          "hash": "njZ2udM6tAsaJeToLayidg=="
+          "hash": "2X+Fh1/yTk1oQNTrQRdNIA=="
         }
       },
       "is_incremental": false,
@@ -153,7 +153,7 @@
       "output": {
         ".html": {
           "relative_path": "api/Blackwood.EmbeddedResources.html",
-          "hash": "sAl5m8LJBEcX09aiUsnEtg=="
+          "hash": "T8/pnAMxKQ8hCzYBMj6vMw=="
         }
       },
       "is_incremental": false,
@@ -165,7 +165,7 @@
       "output": {
         ".html": {
           "relative_path": "api/Blackwood.FS.html",
-          "hash": "g6IswAGCh+GDhDWki1wzlw=="
+          "hash": "VaiRPuTDa/anscA3Q/HBGQ=="
         }
       },
       "is_incremental": false,
@@ -177,7 +177,7 @@
       "output": {
         ".html": {
           "relative_path": "api/Blackwood.FolderWrapper.html",
-          "hash": "yBtV0RlylmlGFQDs1Mn+xw=="
+          "hash": "kiRUgMo6CkhaFpkRYSXkWg=="
         }
       },
       "is_incremental": false,
@@ -189,7 +189,7 @@
       "output": {
         ".html": {
           "relative_path": "api/Blackwood.IFolderWrapper.html",
-          "hash": "qtTb4QuhsYT59ADESeEUCw=="
+          "hash": "z13ojiBedamGEFoZK0Ytew=="
         }
       },
       "is_incremental": false,
@@ -201,7 +201,7 @@
       "output": {
         ".html": {
           "relative_path": "api/Blackwood.MRUCache-2.html",
-          "hash": "lNJJteDAo8Y5s+zlYG9vjQ=="
+          "hash": "jVR90rEh/gwVFxGncsYWxA=="
         }
       },
       "is_incremental": false,
@@ -213,7 +213,7 @@
       "output": {
         ".html": {
           "relative_path": "api/Blackwood.Text.html",
-          "hash": "NMuQd8luePBR9lp8kytziQ=="
+          "hash": "v6w+KCC03lK7ort8I9TvlA=="
         }
       },
       "is_incremental": false,
@@ -225,7 +225,7 @@
       "output": {
         ".html": {
           "relative_path": "api/Blackwood.Util.dWriteBackground.html",
-          "hash": "EmtPjGZIhsZwYgoTjPcosw=="
+          "hash": "kHbtJdZmBgCosPBU29PhaQ=="
         }
       },
       "is_incremental": false,
@@ -237,7 +237,7 @@
       "output": {
         ".html": {
           "relative_path": "api/Blackwood.Util.html",
-          "hash": "IHIN6yl1fSCDf12svGIwoQ=="
+          "hash": "VGSWgftsMCiSAImDjrDscA=="
         }
       },
       "is_incremental": false,
@@ -249,7 +249,7 @@
       "output": {
         ".html": {
           "relative_path": "api/Blackwood.ZipWrapper.html",
-          "hash": "yRq/MLxnOJVOFa+RU3mIGg=="
+          "hash": "1Md/o0EKspokHQZPKOolug=="
         }
       },
       "is_incremental": false,
@@ -299,11 +299,11 @@
     {
       "status": {
         "can_incremental": false,
-        "details": "Disable incremental build by force rebuild option.",
+        "details": "Cannot build incrementally because last build info is missing.",
         "incrementalPhase": "build",
         "total_file_count": 0,
         "skipped_file_count": 0,
-        "full_build_reason_code": "ForceRebuild"
+        "full_build_reason_code": "NoAvailableBuildCache"
       },
       "processors": {
         "ConceptualDocumentProcessor": {
