--- a/src/Blackwood.IO.csproj
+++ b/src/Blackwood.IO.csproj
@@ -1,12 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
-	<LangVersion>9.0</LangVersion>
+    <TargetFramework>net9.0</TargetFramework>
+    <LangVersion>latest</LangVersion>
     <RootNamespace>Blackwood</RootNamespace>
     <UserSecretsId>fe9d3c9f-cc34-4cec-ab33-fd72756ff6b9</UserSecretsId>
     <Description>A collection of C# utilitites commonly needed across many projects.</Description>
-    <Copyright>Copyight 2021-2022, Randall Maas</Copyright>
+    <Copyright>Copyight 2021-2025, Randall Maas</Copyright>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <PackageProjectUrl>https://github.com/randym32/Blackwood.IO</PackageProjectUrl>
     <RepositoryUrl>https://github.com/randym32/Blackwood.IO</RepositoryUrl>
@@ -14,11 +14,11 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>C:\projects\Blackwood.IO\Blackwood.IO.xml</DocumentationFile>
+    <DocumentationFile>..\Blackwood.IO.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Bcl.AsyncInterfaces" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Bcl.AsyncInterfaces" Version="9.0.9" />
   </ItemGroup>
 
   <ItemGroup>
