--- a/src/Blackwood.IO.csproj
+++ b/src/Blackwood.IO.csproj
@@ -12,6 +12,9 @@
     <RepositoryUrl>https://github.com/randym32/Blackwood.IO</RepositoryUrl>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Nullable>enable</Nullable>
+    <Authors>Randall Maas</Authors>
+    <Version>1.1.0</Version>
+    <AssemblyVersion>1.1.0.0</AssemblyVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
